# email-client-app

./: README.md
.github/workflows/: python-app.yml
back-end/: .gitignore  pyproject.toml  requirements.txt
back-end/flaskr/: __init__.py  auth.py  email.py  models.py
back-end/smtp/: client.py  email.py  mail.py  server.py
back-end/tests/: conftest.py  test_auth.py  test_email.py  test_models.py
back-end/utils/: Password.py
front-end/: content.txt  index.html  jest.config.ts  package-lock.json  package.json  server.ts  setupTests.ts  tsconfig.server.json
front-end/src/: EmailClientApp.tsx  main.tsx
front-end/src/api/: emailClientApi.ts
front-end/src/auth/routes/: AuthRoutes.tsx
front-end/src/dashboard/components/: emailPanel.tsx  navBar.tsx  navMenu.tsx
front-end/src/dashboard/layout/: LayoutPanel.tsx  layoutPanel.scss  useLayoutPanel.ts
front-end/src/dashboard/pages/: DashboardPage.tsx  _dashboardPage.scss  useDashBoardPage.ts
front-end/src/dashboard/routes/: DashboardRoutes.tsx
front-end/src/helpers/: convertDate.ts
front-end/src/hooks/: useAuthStore.ts  useEmailStores.ts  useForm.ts  useUiStore.ts
front-end/src/plugins/InputSelectPlugin/: InputSelect.tsx
front-end/src/router/: AppRouter.tsx
front-end/src/store/: store.ts
front-end/src/styles/: _displayFlex.scss  _settings.scss  _stylesGeneral.scss
front-end/src/types/: types.ts
front-end/test/fixtures/: authFixtures.ts  emailFixtures.ts
front-end/test/helpers/: convertDate.test.ts
front-end/test/hooks/: useForm.test.ts
front-end/test/store/auth/: AuthSlice.test.ts
(+29 files in other folders)
